# dnd-rog-mcp

./: .env.example  DESIGN.md  Dockerfile  Dockerfile.test  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  run-tests.ps1  run-tests.sh
src/dnd_mcp/: server.py
src/dnd_mcp/db/: connection.py  queries.py
src/dnd_mcp/models/: nodes.py
src/dnd_mcp/tools/: adventure.py  boxed_text.py  encounters.py  entities.py  files.py  import_export.py  knowledge.py  narrative.py  soft_delete.py  timeline.py
test/: README.md  conftest.py  test_architecture.md  test_data_adventure.md
test/fixtures/: shadowdale.py
test/unit/: test_graph_integrity.py
